--- a/www/src/index.html
+++ b/www/src/index.html
@@ -23,6 +23,9 @@
   </head>
   <body>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
+    <h1 class="text-3xl" font-bold underline>
+      Hello World!
+    </h1>
     <button id="play-pause"></button>
     <div id="fps"></div>
     <canvas id="game-of-life-canvas"></canvas>
